# fsReportRust

./: Cargo.toml
src/: _lib.rs  hello.html  main.rs
static/: index.html  index.js
static/css/: jquery-ui-1.12.1.min.css  style.css
static/js/: jquery-ui-1.12.1.min.js  webFunc.js
